--- a/store/src/app/pages/order/order.component.html
+++ b/store/src/app/pages/order/order.component.html
@@ -1,1 +1,19 @@
-<p>order works!</p>
+<div *ngIf="orders.length > 0 else emptyCart">
+    <div *ngFor="let order of orders">
+      <mat-card class="order-card">
+        <mat-card-header>
+          <mat-card-title>{{ order.product.name }}</mat-card-title>
+          <mat-card-subtitle>Quantity: {{ order.quantity }}</mat-card-subtitle>
+          <mat-card-subtitle>Total Price: \${{ order.totalPrice }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-actions>
+          <button mat-raised-button color="warn" (click)="removeOrder(order.id)">Remove</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
+  
+  <ng-template #emptyCart>
+    <p>Your cart is empty.</p>
+  </ng-template>
+  
