--- a/store/src/app/pages/main/main.component.css
+++ b/store/src/app/pages/main/main.component.css
@@ -42,9 +42,12 @@
     text-align: center;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    border: solid 2px green;
 }
-  
+.product-card:hover{
+    transform: scale(1.025);
+    transition: 0.5s;
+    cursor: pointer;
+}
 .product-card img {
     width: 100%;
     height: 150px;
@@ -58,7 +61,7 @@
   
 button {
     background: #000;
-    color: #fff;
+    color: #000000;
     font-weight: bold;
     padding: 10px 20px;
     border-radius: 5px;
