Сделал функциональную часть без дизайна

--- a/store/src/app/pages/order/order.component.html
+++ b/store/src/app/pages/order/order.component.html
@@ -15,5 +15,6 @@
   
   <ng-template #emptyCart>
     <p>Your cart is empty.</p>
+    <button mat-raised-button color="primary" routerLink="/products">Go to Products</button>
   </ng-template>
   
