--- a/store/src/app/pages/products/products.component.html
+++ b/store/src/app/pages/products/products.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary" class="app-toolbar">
     <span>TezAL Online Store</span>
+
+    <button mat-raised-button color="accent" routerLink="/orders">Go to orders</button>
   </mat-toolbar>
   
   <div class="app-container">
@@ -8,7 +10,7 @@
   
     <div class="products-grid">
       <div *ngFor="let product of products; let i = index" class="product-card">
-        <mat-card class="product-card-content">
+        <mat-card class="product-card-content" [routerLink]="['/product', product.id]">
           <img mat-card-image [src]="product.imageUrl" alt="{{product.name}}" />
           <mat-card-header>
             <mat-card-title>{{ product.name }}</mat-card-title>
